<resources>
    <string name="app_name">WeatherAppMVP</string>
    <string name="hint_type_location">Type location...</string>
    <string name="location">Location:</string>
    <string name="current_temperature">Current temperature:</string>
    <string name="max_temperature">Max. temperature:</string>
    <string name="min_temperature">Min. temperature:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="show_temperature">Show temperature</string>
    <string name="description">Description:</string>
    <string name="title_activity_maps">Map</string>
    <string name="temp_with_param">%1$.2f °C</string>
    <string name="wind_speed_with_param">%1$.2f km/h</string>
</resources>
